music not working anymore

--- a/index.html
+++ b/index.html
@@ -29,15 +29,10 @@
   <div class="nav">
     <ul>
       <li><a href="http://web.engr.oregonstate.edu/~wongnich/cs290/">Home</a></li>
-      <li><a href="http://web.engr.oregonstate.edu/~wongnich/cs290/Assignments">Assignments</a></li>
-      <li><a href="http://web.engr.oregonstate.edu/~wongnich/cs290/Projects">Projects</a></li>
-
     </ul>
     <ul>
-      <li><a href="http://www.w3schools.com/">Help</a></li>
       <li><a href="http://web.engr.oregonstate.edu/~wongnich/cs290/Info">Info</a></li>
-      <li><a href="https://validator.w3.org/">Validate Me</a></li>
-      <li><a href = "https://web.engr.oregonstate.edu/~wongnich/cs290/Resume/wongnichResume2017.pdf">Resume</a></li>
+      <li><a href = "https://nickywongdong.github.io/Resume/wongnichResume2017.pdf">Resume</a></li>
     </ul>
   </div>
 
@@ -54,6 +49,7 @@
 
   <!-- Music Suggestion Box -->
 
+  <!--
   <div class="submitbox">
     <form action="action_page.php">
       Song Title:<br>
@@ -65,6 +61,7 @@
       <input type="submit" value="Submit">
     </form>
   </div>
+-->
 
 
 </body>
