trying music player

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Nicholas Wong</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-loading">
+<!-- SCM Music Player http://scmplayer.co -->
+<script type="text/javascript" src="https://scmplayer.co/script.js" 
+data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'[zanebus] - lonely nights','url':'http://web.engr.oregonstate.edu/~wongnich/cs290/Music/App%20Recording%2020171020%202146.mp4'}]}" ></script>
+<!-- SCM Music Player script end -->
+
+
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
