testing file playback from github.io

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="https://scmplayer.co/script.js" 
 data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 [
-  {'title':'[zanebus] - lonely nights','url':'http://web.engr.oregonstate.edu/~wongnich/cs290/Music/App%20Recording%2020171020%202146.mp4'},
+  {'title':'[zanebus] - lonely nights','url':'https://nickywongdong.github.io/music/lonely_nights.mp4'},
   {'title':'elijah who - so far away','url':'https://www.youtube.com/watch?v=8joh21vURNQ'},
   {'title':'drm_sqnc','url':'https://www.youtube.com/watch?v=xCqlQdpGlXU'},
   {'title':'Kazam ☾- A Story About Time','url':'https://www.youtube.com/watch?v=RJTlfRNnvmY'},
