--- a/index.html
+++ b/index.html
@@ -12,24 +12,16 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+
 <!-- SCM Music Player http://scmplayer.co -->
 <script type="text/javascript" src="https://scmplayer.co/script.js" 
 data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 [
   {'title':'[zanebus] - lonely nights','url':'https://nickywongdong.github.io/music/lonely_nights.mp4'},
-  {'title':'elijah who - so far away','url':'https://www.youtube.com/watch?v=8joh21vURNQ'},
-  {'title':'drm_sqnc','url':'https://www.youtube.com/watch?v=xCqlQdpGlXU'},
-  {'title':'Kazam ☾- A Story About Time','url':'https://www.youtube.com/watch?v=RJTlfRNnvmY'},
-  {'title':'97SPECIAL - our story','url':'https://www.youtube.com/watch?v=O6UJFBBUdQU'},
-  {'title':'linanthem - floral gardens','url':'https://www.youtube.com/watch?v=21XYgQCJ51w'},
-  {'title':'Another Sky','url':'https://www.youtube.com/watch?v=VBqKxAB42eo'},
-  {'title':'Temperature of Tears','url':'https://www.youtube.com/watch?v=Y0N7psZj-hc'},
-  {'title':'Minmi','url':'https://www.youtube.com/watch?v=qK8LfZAOqKs'},
-  {'title':'MYKOOL - Ikiru','url':'https://www.youtube.com/watch?v=wgyF7xIhyaY'},
-  {'title':'Lildeath - 95','url':'https://www.youtube.com/watch?v=NR8vkvoQuEk'}]}" ></script>
+  {'title':'Lildeath - %2795','url':'https://www.youtube.com/watch?v=NR8vkvoQuEk'}]}" ></script>
+
+
 <!-- SCM Music Player script end -->
-
-
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
