converting youtube to .mp3

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 [
   {'title':'[zanebus] - lonely nights','url':'https://nickywongdong.github.io/music/lonely_nights.mp4'},
-  {'title':'Lildeath - %2795','url':'https://www.youtube.com/watch?v=NR8vkvoQuEk'}]}" ></script>
+  {'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'},
+  {'title':'Lildeath - %2795','url':'https://nickywongdong.github.io/music/lildeath_95.mp3'},
+  {'title':'Kazam ☾- A Story About Time','url':'url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'}]}" ></script>
 
 
 <!-- SCM Music Player script end -->
@@ -28,10 +30,8 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p>Hi, I'm Nick Wong, <br />
+						I'm a student studying Computer Science at Oregon State University.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
