--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 <script type="text/javascript" src="https://scmplayer.co/script.js" 
 data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 [
-  {'title':'[zanebus] - lonely nights','url':'https://nickywongdong.github.io/music/lonely_nights.mp4'},
-  {'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'},
-  {'title':'Lildeath - %2795','url':'https://nickywongdong.github.io/music/lildeath_95.mp3'},
-  {'title':'Kazam ☾- A Story About Time','url':'url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'}]}" ></script>
+	{'title':'Kazam ☾- A Story About Time','url':'url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'}
+  	{'title':'elijah who - so far away','url':'https://nickywongdong.github.io/music/so_far_away.mp3'},
+  	{'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'},
+  	{'title':'Lildeath - %2795','url':'https://nickywongdong.github.io/music/lildeath_95.mp3'},
+  	{'title':'linanthem - floral gardens','url':'https://nickywongdong.github.io/music/floral_gardens.mp3'},
+  	{'title':'DJ Okawari - Another Sky','url':'https://nickywongdong.github.io/music/another_sky.mp3'}
+]}" ></script>
 
 
 <!-- SCM Music Player script end -->
