testing song one by one

--- a/index.html
+++ b/index.html
@@ -17,16 +17,8 @@
 <script type="text/javascript" src="https://scmplayer.co/script.js" 
 data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 [
-{'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'},
-{'title':'elijah who - so far away','url':'https://nickywongdong.github.io/music/so_far_away.mp3'},
-{'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'},
-{'title':'Lildeath - %2795','url':'https://nickywongdong.github.io/music/lildeath_95.mp3'},
-{'title':'linanthem - floral gardens','url':'https://nickywongdong.github.io/music/floral_gardens.mp3'},
-{'title':'DJ Okawari - Another Sky','url':'https://nickywongdong.github.io/music/another_sky.mp3'}]}" ></script>
-
-
+{'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'}]}" ></script>
 <!-- SCM Music Player script end -->
-
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
