--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 [
 {'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'},
-{'title':'elijah who - so far away','url':'https://nickywongdong.github.io/music/so_far_away.mp3'}]}" ></script>
+{'title':'elijah who - so far away','url':'https://nickywongdong.github.io/music/so_far_away.mp3'},
+{'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'}]}" ></script>
 <!-- SCM Music Player script end -->
 
 		<!-- Wrapper -->
