testing 4th song

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 [
 {'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'},
 {'title':'elijah who - so far away','url':'https://nickywongdong.github.io/music/so_far_away.mp3'},
-{'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'}]}" ></script>
+{'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'},
+{'title':'Lildeath - %2795','url':'https://nickywongdong.github.io/music/lildeath_95.mp3'}]}" ></script>
 <!-- SCM Music Player script end -->
 
 		<!-- Wrapper -->
