testing last song

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 {'title':'elijah who - so far away','url':'https://nickywongdong.github.io/music/so_far_away.mp3'},
 {'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'},
 {'title':'Lildeath - %2795','url':'https://nickywongdong.github.io/music/lildeath_95.mp3'},
-{'title':'linanthem - floral gardens','url':'https://nickywongdong.github.io/music/floral_gardens.mp3'}]}" ></script>
+{'title':'linanthem - floral gardens','url':'https://nickywongdong.github.io/music/floral_gardens.mp3'},
+{'title':'DJ Okawari - Another Sky','url':'https://nickywongdong.github.io/music/another_sky.mp3'}]}" ></script>
 <!-- SCM Music Player script end -->
 
 		<!-- Wrapper -->
