testing removal of blog style

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/nickywongdong" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -76,8 +76,6 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 								</ul>
 							</article>
 
-						<!-- Posts -->
-							<section class="posts">
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
@@ -150,7 +148,6 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-							</section>
 
 						<!-- Footer -->
 							<footer>
