--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="icon" href="https://nickywongdong.github.io/images/favicon.png"
+		<link rel="icon" type="image/png" href="https://nickywongdong.github.io/images/favicon_icon.png"
 	</head>
 
 <!-- SCM Music Player http://scmplayer.co -->
