--- a/audiojs/index.html
+++ b/audiojs/index.html
@@ -17,10 +17,11 @@
       <h1>audio.js</h1>
     </header>
 
-    <audio src="http://kolber.github.io/audiojs/demos/mp3/juicy.mp3" preload="auto"></audio>
-    <audio src="http://kolber.github.io/audiojs/demos/mp3/juicy.mp3" preload="auto"></audio>
-    <audio src="http://kolber.github.io/audiojs/demos/mp3/juicy.mp3" preload="auto"></audio>
-    <audio src="http://kolber.github.io/audiojs/demos/mp3/juicy.mp3" preload="auto"></audio>
+    <audio preload src="http://kolber.github.io/audiojs/demos/mp3/juicy.mp3" preload="auto"></audio>
+    <ol>
+      <li class>
+        <a href="#" data-src="http://kolber.github.io/audiojs/demos/mp3/juicy.mp3">juicy</a>
+      </li>
 
     <h2>audio.js is a drop-in javascript library that allows HTML5’s &lt;audio&gt; tag to be used anywhere.</h2>
 
