audio.js playlist

--- a/audiojs/index.html
+++ b/audiojs/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>audio.js</title>
     <script>var _gaq=[['_setAccount','UA-20257902-1'],['_trackPageview']];(function(d,t){ var g=d.createElement(t),s=d.getElementsByTagName(t)[0]; g.async=1;g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'))</script>
-    <script src="./audiojs/audio.min.js"></script>
-    <link rel="stylesheet" href="./includes/index.css" media="screen">
+    <script src="/audiojs/audio.min.js"></script>
+    <link rel="stylesheet" href="../assets/css/main.css" media="screen">
     <script>
         $(function() {
             // Setup the player to autoplay the next track
@@ -57,17 +57,15 @@
     </header>
 
    <div id="wrapper">
-    <h1>Bensound Royalty Free Tracks</h1>
     <audio preload></audio>
     <ol>
-        <li><a href="#" data-src="../mp3/bensound-dubstep.mp3">Dubstep</a></li>
-        <li><a href="#" data-src="../mp3/bensound-cute.mp3">Cute</a></li>
-        <li><a href="#" data-src="../mp3/bensound-buddy.mp3">Buddy</a></li>
-        <li><a href="#" data-src="../mp3/bensound-acousticbreeze.mp3">Acoustic Breeze</a></li>
-        <li><a href="#" data-src="../mp3/bensound-epic.mp3">Epic</a></li>
-        <li><a href="#" data-src="../mp3/bensound-funnysong.mp3">Funny Song</a></li>
-        <li><a href="#" data-src="../mp3/bensound-littleidea.mp3">Little Idea</a></li>
-        <li><a href="#" data-src="../mp3/bensound-betterdays.mp3">Better Days</a></li>
+        <li><a href="#" data-src="../music/a_story_about_time.mp3">A Story About Time</a></li>
+        <li><a href="#" data-src="../music/another_sky.mp3">Another Sky</a></li>
+        <li><a href="#" data-src="../music/floral_gardens.mp3">Floral Gardens</a></li>
+        <li><a href="#" data-src="../music/lildeath_95.mp3">95</a></li>
+        <li><a href="#" data-src="../music/lonely_nights.mp4">Lonely Nights</a></li>
+        <li><a href="#" data-src="../music/our_story.mp3">Our Story</a></li>
+        <li><a href="#" data-src="../music/so_far_away.mp3">So Far Away</a></li>
     </ol>
   </div>
 
