--- a/audiojs/index.html
+++ b/audiojs/index.html
@@ -5,7 +5,7 @@
     <title>audio.js</title>
     <script>var _gaq=[['_setAccount','UA-20257902-1'],['_trackPageview']];(function(d,t){ var g=d.createElement(t),s=d.getElementsByTagName(t)[0]; g.async=1;g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'))</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="./audiojs/audio.min.js"></script>
+    <script src="audiojs/audio.min.js"></script>
     <link rel="stylesheet" href="../assets/css/main.css" media="screen">
     <script>
         $(function() {
