--- a/audiojs/index.html
+++ b/audiojs/index.html
@@ -60,7 +60,7 @@
    <div id="wrapper">
     <audio preload></audio>
     <ol>
-        <li><a href="#" data-src="/music/a_story_about_time.mp3">A Story About Time</a></li>
+        <li><a href="#" data-src="https://nickywongdong.github.io/music/a_story_about_time.mp3">A Story About Time</a></li>
         <li><a href="#" data-src="/music/another_sky.mp3">Another Sky</a></li>
         <li><a href="#" data-src="/music/floral_gardens.mp3">Floral Gardens</a></li>
         <li><a href="#" data-src="/music/lildeath_95.mp3">95</a></li>
