fixed file path

--- a/audiojs/test1.html
+++ b/audiojs/test1.html
@@ -32,7 +32,7 @@
         }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="/audiojs//audiojs/audio.js"></script>
+    <script src="/audiojs/audiojs/audio.js"></script>
     <script>
         $(function() {
             // Setup the player to autoplay the next track
