--- a/audiojs/test1.html
+++ b/audiojs/test1.html
@@ -83,14 +83,7 @@
     <h1>Bensound Royalty Free Tracks</h1>
     <audio preload></audio>
     <ol>
-        <li><a href="#" data-src="../mp3/bensound-dubstep.mp3">Dubstep</a></li>
-        <li><a href="#" data-src="../mp3/bensound-cute.mp3">Cute</a></li>
-        <li><a href="#" data-src="../mp3/bensound-buddy.mp3">Buddy</a></li>
-        <li><a href="#" data-src="../mp3/bensound-acousticbreeze.mp3">Acoustic Breeze</a></li>
-        <li><a href="#" data-src="../mp3/bensound-epic.mp3">Epic</a></li>
-        <li><a href="#" data-src="../mp3/bensound-funnysong.mp3">Funny Song</a></li>
-        <li><a href="#" data-src="../mp3/bensound-littleidea.mp3">Little Idea</a></li>
-        <li><a href="#" data-src="../mp3/bensound-betterdays.mp3">Better Days</a></li>
+        <li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/lonely_nights.mp4">Dubstep</a></li>
     </ol>
 </div>
 <div id="shortcuts">
