using web.engr links instead of .io:

--- a/audiojs/test1.html
+++ b/audiojs/test1.html
@@ -82,8 +82,13 @@
 <div id="wrapper">
     <h1>Bensound Royalty Free Tracks</h1>
     <audio preload></audio>
-    <ol>
-        <li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/lonely_nights.mp4">Dubstep</a></li>
+     <ol>
+        <li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/lonely_nights.mp4">Lonely Nights</a></li>
+        <li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/a_story_about_time.mp3">A Story About Time</a></li>
+        <li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/another_sky.mp3">Another Sky</a></li>
+        <li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/floral_gardens.mp3">Floral Gardens</a></li>
+        <li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/our_story.mp3">Our Story</a></li>
+        <li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/so_far_away.mp3">So Far Away</a></li>
     </ol>
 </div>
 <div id="shortcuts">
