--- a/generic.html
+++ b/generic.html
@@ -11,11 +11,68 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script>var _gaq=[['_setAccount','UA-20257902-1'],['_trackPageview']];(function(d,t){ var g=d.createElement(t),s=d.getElementsByTagName(t)[0]; g.async=1;g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'))</script>
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    	<script src="audiojs/audiojs/audio.min.js"></script>
+    	<script>
+        $(function() {
+            // Setup the player to autoplay the next track
+            var a = audiojs.createAll({
+                trackEnded: function() {
+                    var next = $('ol li.playing').next();
+                    if (!next.length) next = $('ol li').first();
+                    next.addClass('playing').siblings().removeClass('playing');
+                    audio.load($('a', next).attr('data-src'));
+                    audio.play();
+                }
+            });
+            // Load in the first track
+            var audio = a[0];
+            first = $('ol a').attr('data-src');
+            $('ol li').first().addClass('playing');
+            audio.load(first);
+            // Load in a track on click
+            $('ol li').click(function(e) {
+                e.preventDefault();
+                $(this).addClass('playing').siblings().removeClass('playing');
+                audio.load($('a', this).attr('data-src'));
+                audio.play();
+            });
+            // Keyboard shortcuts
+            $(document).keydown(function(e) {
+                var unicode = e.charCode ? e.charCode : e.keyCode;
+                // right arrow
+                if (unicode == 39) {
+                    var next = $('li.playing').next();
+                    if (!next.length) next = $('ol li').first();
+                    next.click();
+                    // back arrow
+                } else if (unicode == 37) {
+                    var prev = $('li.playing').prev();
+                    if (!prev.length) prev = $('ol li').last();
+                    prev.click();
+                    // spacebar
+                } else if (unicode == 32) {
+                    audio.playPause();
+                }
+            })
+        });
+    </script>
+
 	</head>
 	<body class="is-loading">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
+				<audio preload></audio>
+    			<ol>
+        			<li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/lonely_nights.mp4">Lonely Nights</a></li>
+        			<li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/a_story_about_time.mp3">A Story About Time</a></li>
+        			<li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/another_sky.mp3">Another Sky</a></li>
+        			<li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/floral_gardens.mp3">Floral Gardens</a></li>
+        			<li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/our_story.mp3">Our Story</a></li>
+        			<li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/so_far_away.mp3">So Far Away</a></li>
+    			</ol>
 
 				<!-- Header -->
 					<header id="header">
