trying to hide playlist

--- a/generic.html
+++ b/generic.html
@@ -66,6 +66,7 @@
 			<div id="wrapper">
 				<audio preload></audio>
     			<ol>
+    				<li class = "hide" ></li>
         			<li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/lonely_nights.mp4">Lonely Nights</a></li>
         			<li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/a_story_about_time.mp3">A Story About Time</a></li>
         			<li><a href="#" data-src="http://web.engr.oregonstate.edu/~wongnich/cs290/Music/another_sky.mp3">Another Sky</a></li>
