--- a/index.html
+++ b/index.html
@@ -154,24 +154,23 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>Oregon State University<br />
+								Corvallis, OR 97330</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(503) 703-5196</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">wongnich@gmail.com</a></p>
 							</section>
 							<section>
-								<h3>Social</h3>
+								<h3>Github</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/nickywongdong" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="wongnich@gmail.com" class="icon alt fa-email"><span class="label">Email"</span></a></li>
+
 								</ul>
 							</section>
 						</section>
