--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 				<!-- Intro -->
 					<div id="intro">
 						<p>Hi, I'm Nick Wong, <br />
-						I'm a student studying Computer Science at Oregon State University.</p>
+						Welcome to my website.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -40,7 +40,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">&uarr;</a>
+						<a href="index.html" class="logo">Nick Wong</a>
 					</header>
 
 				<!-- Nav -->
