testing about me section:

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 								<article>
 									<header>
 										<!--<span class="date">April 24, 2017</span>-->
-										<h2><a href="#">Section 1</a></h2>
+										<h2><a href="#">About Me</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/image1.jpg" alt="" /></a>
+									<p>I'm a student studying Computer Science at Oregon State. In my free time I like to listen to music, and you can find a playlist at the top of the website, or play from your mobile in the music tab.</p>
 									<!--<ul class="actions">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>-->
@@ -91,7 +91,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 								<article>
 									<header>
 										<!--<span class="date">April 22, 2017</span>-->
-										<h2><a href="#">Section 2</a></h2>
+										<h2><a href="#">Experience</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -101,7 +101,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Section 3</a></h2>
+										<h2><a href="#">Showcase</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
