updating information and including some coursework highlights

--- a/index.html
+++ b/index.html
@@ -61,13 +61,23 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/image1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Nick Wong</h2>
-									<p>I'm a student at Oregon State studying Computer Science.</p>
+									<p>I'm a student at Oregon State studying Computer Science. Here i'll try to post my coursework as a Computer Science student</p>
+									
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Senior Capstone</h2>
+									<p>This is my senior design project where I am working with 2 others on an infotainment system/black box built on Nvidia's Jetson TX2.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://github.com/nickywongdong/wombat" class="button">GitHub Link</a></li>
 									</ul>
 								</div>
 							</div>
@@ -76,10 +86,10 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>CS340 - Introduction to Databases</h2>
+									<p>In this class, we are creating our own database and a website to access that database using NodeJS.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://github.com/nickywongdong/CS340" class="button">Databases Project</a></li>
 									</ul>
 								</div>
 							</div>
@@ -88,10 +98,11 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>CS492 - Mobile Software Development</h2>
+									<p>In this class I learned to develop basic Android applications using Android Studio. We are currently developing an Android application that automatically generates hashtags based on an image.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://github.com/blazerzero/mobiledevfinal" class="button">Hashtag Generator GitHub Link</a></li>
+										<li><a href="https://github.com/nickywongdong/cs492" class="button">Coursework</a></li>
 									</ul>
 								</div>
 							</div>
@@ -101,38 +112,33 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>My Classwork</h2>
-							<p>Here i'll try to post my coursework as a Computer Science student.</p>
+							<h2>My Skills</h2>
+							<p>Here are the skills that I've learned through my time at Oregon State.</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>C/C++</h3>
+									<p>This is the language that I am most comfortable with.</p>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Java</h3>
+									<p>This is a language that I am beginning to learn more about.</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Python</h3>
+									<p>This is a language that I have had brief experience with.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>HTML/CSS</h3>
+									<p>This is the language that I used to set up this website.</p>
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Golang</h3>
+									<p>This is a language that I have become interested in.</p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -169,7 +175,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 												<li><a href="https://github.com/nickywongdong/resume/wongnichResume2018" class="fa fa-file-text"><span class="label">Resume</span></a></li>
 												
 												<li><a href="https://github.com/nickywongdong" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="www.linkedin.com/in/nicholas-wong-5b836091" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://www.linkedin.com/in/nicholas-wong-5b836091" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
